--- a/_includes/body.html
+++ b/_includes/body.html
@@ -15,6 +15,11 @@
             </div>
 
             {%- include search.html -%}
+            
+            {%- include comments.html -%}
         </div>
+        
     </div>
+    
 </div>
+
