--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,9 @@
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+
 <script>
     MathJax = {
         tex: {
@@ -45,4 +48,17 @@
             fontCache: 'global'
         }
     };
+
+    function gitTalkInit(){
+    const gitalk = new Gitalk({
+        clientID: '{{ site.comments.gitalk.clientID }}',
+        clientSecret: '{{ site.comments.gitalk.clientSecret }}',
+        repo: '{{ site.comments.gitalk.repo }}',
+        owner: '{{ site.comments.gitalk.owner }}',
+        admin: ['{{ site.comments.gitalk.admin }}'],
+        id: location.pathname,      // Ensure uniqueness and length less than 50
+        distractionFreeMode: true  // Facebook-like distraction free mode
+    })
+    gitalk.render('gitalk-container')
+}
 </script>
