--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <!-- google search-console -->
-<meta name="google-site-verification" content="Hcve4yZ6k9qHCwxK_9bF2kYULoYHEGtf9f19mPXoSvQ" />
+<meta name="google-site-verification" content="{{site.user_verification}}" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{site.user_adsense_client}}"
+     crossorigin="anonymous"></script>
 
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
@@ -64,3 +66,5 @@
     gitalk.render('gitalk-container')
 }
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3553523371446563"
+     crossorigin="anonymous"></script>
