--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
 
         {%- include head.html -%}
 
-        {% assign reversed_posts = site.posts | reverse %}
+        {% assign reversed_posts = site.posts | reverse | sort: 'order' %}
 
         {% if reversed_posts %}
             <link rel="next" href="{{site.baseurl}}{{reversed_posts.first.url}}" />
