--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,5 +66,5 @@
     gitalk.render('gitalk-container')
 }
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3553523371446563"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{site.user_adsense_client}}"
      crossorigin="anonymous"></script>
