--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,9 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <!-- google search-console -->
 <meta name="google-site-verification" content="{{site.user_verification}}" />
+<!-- google adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{site.user_adsense_client}}"
+     crossorigin="anonymous"></script>
 
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
