page init size edit

--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,5 +1,5 @@
 <!-- 반응형 수평광고 -->
-{% if site.comments.gitalk.clientID and site.comments.gitalk.clientSecret %}
+{% if site.user_adsense_client %}
 <ins class="adsbygoogle"
     style="display:block"
     data-ad-client="{{site.user_adsense_client}}"
