--- a/_includes/body.html
+++ b/_includes/body.html
@@ -7,19 +7,22 @@
                     {% if page.title %}
                         <h1 id="{{ page.id }}">{{ page.title | escape }}</h1>
                         <hr/>
+                        {%- include adsense.html -%}
+                        <br>
                     {% else %}
                         <h1 id="{{ page.id }}">{{ site.title | escape }}</h1>
                         <hr/>
                     {% endif %}
-                    {%- include adsense.html -%}
 
                     {{ content }}
                 </section>
             </div>
 
             {%- include search.html -%}
-            
-            {%- include comments.html -%}
+
+            {% if page.title %}
+                {%- include comments.html -%}
+            {% endif %}
         </div>
         
     </div>
